# group-similar

./: Cargo.toml  README.md
.github/workflows/: release.yml
benches/: bench.rs
examples/: gen_blog_cms.rs  gen_ecommerce_errors.rs
src/: config.rs  lib.rs  main.rs  normalize.rs  tokens.rs
