[package]
name = "group-similar"
description = "Hierarchical clustering by similarity, with batteries-included string metrics"
repository = "https://github.com/joshuaclayton/group-similar"
version = "0.2.2"
authors = ["Joshua Clayton <joshua.clayton@gmail.com>"]
edition = "2018"
license = "MIT"
categories = ["algorithms", "text-processing"]
keywords = ["clustering", "similarity", "hierarchical", "jaro", "cosine"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "3"
jaro_winkler = "0.2"
kodama = "0.3"
mimalloc = { version = "0.1", default-features = false }
rayon = "1.5"
serde = "1.0"
serde_json = "1.0"
structopt = "0.3"

[dev-dependencies]
criterion = "0.8"
quickcheck = "1"
quickcheck_macros = "1"

[[bench]]
name = "bench"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.dev]
split-debuginfo = "unpacked"
